@@ -1,0 +1,32 @@
+<?xml version="1.0" encoding="UTF-8" ?>
+<phpdoc>
+    <title>CMS Made Simple</title>
+    <parser>
+        <target>../apidoc/tmp</target>
+        <markers>
+            <item>TODO</item>
+            <item>FIXME</item>
+        </markers>
+        <extensions>
+            <extension>php</extension>
+        </extensions>
+        <visibility>public,protected</visibility>
+    </parser>
+    <transformer>
+        <target>../apidoc/html</target>
+    </transformer>
+    <logging>
+        <level>debug</level>
+        <paths>
+            <default>../apidoc/tmp/log</default>
+            <errors>../apidoc/tmp/errors.log</errors>
+        </paths>
+    </logging>
+    <transformations>
+        <template name="responsive" />
+    </transformations>
+    <files>
+        <directory>../lib/classes</directory>
+        <ignore>module_support/*</ignore>
+    </files>
+</phpdoc>
